--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <!--Sets type to HTML5>
 <html>
     <head>
-	<style>
-  	h2{
-    	color: red;
-  	}
-	</style>
         <!--#body links to whatever has "body" as an id-->
         <p>Link to the <a href=#body>body</a>.</p>
     </head>
     
     <body>
 	<h2>
-	<!--The style element sets the color of the heading-->
-	Red Heading
+	Heading
 	</h2>
         <p><a href=#>Dead link</a></p>
         
